test/spec_vectors/br/fail/module_3.wat
(module (func $type-arg-void-vs-num-nested (result i32) (block (result i32) (i32.const 0) (block (br 1)))))